--- a/.github/workflows/e2e-cache.yml
+++ b/.github/workflows/e2e-cache.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Install pipenv
         run: pipx install pipenv
       - name: Install dependencies
-        run: pipenv install requests
+        run: pipenv install numpy
 
   python-poetry-dependencies-caching:
     name: Test poetry (Python ${{ matrix.python-version}}, ${{ matrix.os }})
@@ -72,7 +72,7 @@ jobs:
       - name: Init pyproject.toml
         run: poetry init -n
       - name: Install dependencies
-        run: poetry add flake8
+        run: poetry add flake8 black
 
   python-pip-dependencies-caching-path:
     name: Test pip (Python ${{ matrix.python-version}}, ${{ matrix.os }})
